Liskov Substitution Principle

--- a/4.InterfaceSegregationPrinciple/4.InterfaceSegregationPrinciple.csproj
+++ b/4.InterfaceSegregationPrinciple/4.InterfaceSegregationPrinciple.csproj
@@ -6,4 +6,9 @@
     <RootNamespace>_4.InterfaceSegregationPrinciple</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="HowNotTo\" />
+    <Folder Include="HowTo\" />
+  </ItemGroup>
+
 </Project>
